@@ -34,6 +34,7 @@ Bug fixes:
 - PR#5787: Bad behavior of 'Unused ...' warnings in the toplevel
 - PR#5770: Syntax error messages involving unclosed parens are sometimes incorrect
 - PR#5805: Assert failure with warning 34 on pre-processed file
+- PR#5821: Wrong record field is reported as duplicate
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
